--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,3 +1,24 @@
-<p>home works!</p>
+<div>
+  <img id="blink" src="assets/images/svg/blink.svg" alt="blink emogi">
+</div>
 
-<a routerLink="/projetos" routerLinkActive="active">projetos</a>
+<div>
+  <h1>Em breve estaremos ativos!</h1>
+</div>
+
+<div>
+  <ul class="trabalhos-holder">
+    <li class="trabalhos">
+      <img src="assets/images/svg/ok.svg" alt="check">
+      <h4>UI Designer</h4>
+    </li>
+    <li class="trabalhos">
+      <img src="assets/images/svg/ok.svg" alt="check">
+      <h4>Ilustrações</h4>
+    </li>
+    <li class="trabalhos">
+      <img src="assets/images/svg/ok.svg" alt="check">
+      <h4>Animações</h4>
+    </li>
+  </ul>
+</div>
