--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,24 +1,2 @@
-<div>
-  <img id="blink" src="assets/images/svg/blink.svg" alt="blink emogi">
-</div>
 
-<div>
-  <h1>Em breve estaremos ativos!</h1>
-</div>
-
-<div>
-  <ul class="trabalhos-holder">
-    <li class="trabalhos">
-      <img src="assets/images/svg/ok.svg" alt="check">
-      <h4>UI Designer</h4>
-    </li>
-    <li class="trabalhos">
-      <img src="assets/images/svg/ok.svg" alt="check">
-      <h4>Ilustrações</h4>
-    </li>
-    <li class="trabalhos">
-      <img src="assets/images/svg/ok.svg" alt="check">
-      <h4>Animações</h4>
-    </li>
-  </ul>
-</div>
+  <img src="assets/images/svg/logo.svg" alt="logo">
