--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,17 @@
-<p>projects works!</p>
+<app-caroussel>
+    <app-slide backgroundColor="#ff0000">
+        Teste 0
+    </app-slide>
+
+    <app-slide backgroundColor="#00ff00">
+        Teste 1
+    </app-slide>
+
+    <app-slide backgroundColor="#0000ff">
+        Teste 2
+    </app-slide>
+
+    <app-slide backgroundColor="#ffffff">
+        Teste 3
+    </app-slide>
+</app-caroussel>
