--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,12 +1,7 @@
 <div>
-    <img routerLink="/" id="menu-logo" src="assets/images/svg/logo amarelo minimalista.svg" alt="Logo">
-</div>
-
-<div>
     <ul id="menu-links">
-        <li routerLink="/legado" routerLinkActive="active" class="menu-link">Legado</li>
+        <li routerLink="/" routerLinkActive="hide" class="menu-link">Yane Studios</li>
         <li routerLink="/projetos" routerLinkActive="active" class="menu-link">Projetos</li>
-        <li routerLink="/contato" routerLinkActive="active" class="menu-link">Contato</li>
-        <li routerLink="/trabalhe-conosco" routerLinkActive="active" class="menu-link">Trabalhe conosco</li>
+        <li routerLink="/sobre" routerLinkActive="active" class="menu-link">About</li>
     </ul>
 </div>
