--- a/src/app/shared/menu/menu.component.sass
+++ b/src/app/shared/menu/menu.component.sass
@@ -1,12 +1,8 @@
 :host
     display: flex
     flex-direction: row
-    justify-content: space-between
+    justify-content: center
     align-items: center
-
-    background: #FFFFFF
-    box-shadow: 0px 4px 10px #EBE081
-    margin-bottom: 15px
 
     #menu-logo
         width: 40%
@@ -14,6 +10,7 @@
     #menu-links
         display: flex
         flex-direction: row
+        padding: 0
 
         .menu-link
             list-style-type: none
@@ -23,10 +20,14 @@
             font-weight: normal
             font-size: 24px
             line-height: 31px
+            text-transform: uppercase
 
-            color: #E3D450
+            color: #ffffff80
 
             cursor: pointer
 
             &.active
-                color: #c3af00
+                color: #ffffff
+
+            &.hide
+                display: none
